--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
+
 <body>
   <div class="page">
     <header class="header">
-
+      <img src="/images/logo_place_header.svg" alt="Yandex logo" class='logo logo_place_header'>
+      <h1 class='header__title'>Научиться учиться</h1>
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей
+        жизни?
+        <a href="#" class="header__link">Узнать →</a>
+      </p>
+      <img src="/images/header-image.png" alt="Жизнь боль" class="header_main-illustration">
     </header>
     <main class="content">
       <section class="description">
+        <div class="description__two-columns">
+          <h3 class="description__two-columns_brief">Главные проблемы в обучении</h3>
+        </div>
       </section>
 
       <section class="digits">
@@ -28,4 +42,5 @@
     </footer>
   </div>
 </body>
+
 </html>
