--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
 
     <header class="header">
-      <img src="/images/logo_place_header.svg" alt="Yandex logo" class='logo logo__place_header'>
+      <img src="/images/logo_place_header.svg" alt="Яндекс лого" class='logo logo__place_header'>
       <h1 class='header__title'>Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей
@@ -93,7 +93,7 @@
         <h1 class="feynman__title">Метод Фейнмана</h1>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a href="#" class="feynman__link">Подробнее →</a>
-        <img src="/images/feynman.png" alt="Richard P. Feynman " class="feynman__image">
+        <img src="/images/feynman.png" alt="Ричард Фейнман " class="feynman__image">
       </section>
 
       <section class="kaufman">
@@ -142,14 +142,14 @@
             <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости</p>
           </div>
         </div>
-        <img src="/images/kaufman-triangle.svg" alt="Triange" class="kaufman__triangle">
+        <img src="/images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
       </section>
 
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column_copyright">
-          <img src="/images/logo_place_footer.svg" alt="Yandex logo" class='logo logo_place_footer'>
+          <img src="/images/logo_place_footer.svg" alt="Яндекс лого подвал" class='logo logo_place_footer'>
           <p class="footer__author">&copy; 2021. Колганов Александр</p>
         </div>
         <nav class="footer__column_info">
@@ -170,15 +170,15 @@
           <p class="footer__column-heading">Соцсети</p>
           <div class="footer__column-links">
             <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Facebook-ico"
+              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Фэйсбук"
                   src="/images/facebook_color_white.svg">Facebook</a>
             </div>
             <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Facebook-ico"
+              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Вконтакте"
                   src="/images/vk_color_white.svg">ВКонтакте</a>
             </div>
             <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Facebook-ico"
+              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Инстаграм"
                   src="/images/instagram_color_white.svg">Instagram</a>
             </div>
           </div>
