--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 <body>
   <div class="page">
-
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Яндекс лого" class='logo logo__place_header'>
-      <h1 class='header__title'>Научиться учиться</h1>
+      <img src="./images/logo_place_header.svg" alt="Яндекс лого" class='logo logo_place_header'>
+      <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
@@ -27,30 +26,32 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-        </div>
-        <div class="two-columns__main-text">
-          <p class="two-columns__paragraph">
-            Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим
-            билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам
-            реального знания. Зубрежка быстро выветривается и не приносит пользы.
-          </p>
-          <p class="two-columns__paragraph">
-            <span class="two-columns__span-accent">
-              Вывод:
-            </span>
-            учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-          </p>
-          <p class="two-columns__paragraph">
-            Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
-            захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-          </p>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+              учим
+              билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает
+              нам
+              реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">
+                Вывод:
+              </span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
+              захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учебу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -97,91 +98,91 @@
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title section-title_theme-dark">Принципы обучения</h1>
-        <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
-        <div class="table table_theme-dark">
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">1</h3>
-            <p class="table__text table__text_theme-dark">Выберите привлекательный проект.</p>
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table table_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">2</h3>
-            <p class="table__text table__text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">3</h3>
-            <p class="table__text table__text_theme-dark">Определите целевой уровень мастерства.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">4</h3>
-            <p class="table__text table__text_theme-dark">Разбейте навык на элементы.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">5</h3>
-            <p class="table__text table__text_theme-dark">Приготовьте всё необходимое для занятий</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">6</h3>
-            <p class="table__text table__text_theme-dark">Устраните препятствия для занятий.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">7</h3>
-            <p class="table__text table__text_theme-dark">Выделите специальное время для занятий</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">8</h3>
-            <p class="table__text table__text_theme-dark">Создайте быстрые петли обратной связи.</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">9</h3>
-            <p class="table__text table__text_theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">10</h3>
-            <p class="table__text table__text_theme-dark">Уделяйте внимание количеству и скорости</p>
+          <div class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
 
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_copyright">
+        <div class="footer__column_content-copyright">
           <img src="./images/logo_place_footer.svg" alt="Яндекс лого подвал" class='logo logo_place_footer'>
           <p class="footer__author">&copy; 2021. Колганов Александр</p>
         </div>
-        <nav class="footer__column_info">
-          <p class="footer__column-heading">О Практикуме</p>
-          <div class="footer__column-links">
-            <div>
-              <a href="#" class="footer_column-link">Главная</a>
-            </div>
-            <div>
-              <a href="#" class="footer_column-link">Концепция</a>
-            </div>
-            <div>
-              <a href="#" class="footer_column-link">Наставники</a>
-            </div>
-          </div>
+        <nav class="footer__column_content-info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link">Главная</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Концепция</a>
+            </li>
+            <li>
+              <a href="#" class="footer__column-link">Наставники</a>
+            </li>
+          </ul>
         </nav>
-        <nav class="footer__column_social">
-          <p class="footer__column-heading">Соцсети</p>
-          <div class="footer__column-links">
-            <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Фэйсбук"
+        <nav class="footer__column_content-social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+            <li>
+              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Фэйсбук"
                   src="./images/facebook_color_white.svg">Facebook</a>
-            </div>
-            <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Вконтакте"
+            </li>
+            <li>
+              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Вконтакте"
                   src="./images/vk_color_white.svg">ВКонтакте</a>
-            </div>
-            <div>
-              <a href="#" class="footer_column-link"><img class="footer_social-icon" alt="Инстаграм"
+            </li>
+            <li>
+              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Инстаграм"
                   src="./images/instagram_color_white.svg">Instagram</a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </nav>
       </div>
     </footer>
