Внесены заключительные правки на основании ревью

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Яндекс лого" class='logo logo_place_header'>
+      <img src="./images/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей
@@ -91,16 +91,15 @@
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a href="#" class="feynman__link">Подробнее →</a>
         <img src="./images/feynman.png" alt="Ричард Фейнман " class="feynman__image">
       </section>
 
       <section class="kaufman">
-        <div class="kaufman__triangle"></div>
-        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -144,16 +143,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости</p>
           </div>
         </div>
+        <div class="kaufman__triangle"></div>
       </section>
 
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content-copyright">
-          <img src="./images/logo_place_footer.svg" alt="Яндекс лого подвал" class='logo logo_place_footer'>
+        <div class="footer__column footer__column_content-copyright">
+          <img src="./images/logo_place_footer.svg" alt="Яндекс лого подвал" class="logo logo_place_footer">
           <p class="footer__author">&copy; 2021. Колганов Александр</p>
         </div>
-        <nav class="footer__column_content-info">
+        <nav class="footer__column footer__column_content-info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
@@ -167,19 +167,19 @@
             </li>
           </ul>
         </nav>
-        <nav class="footer__column_content-social">
+        <nav class="footer__column footer__column_content-social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
-              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Фэйсбук"
+              <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Фэйсбук"
                   src="./images/facebook_color_white.svg">Facebook</a>
             </li>
             <li>
-              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Вконтакте"
+              <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Вконтакте"
                   src="./images/vk_color_white.svg">ВКонтакте</a>
             </li>
             <li>
-              <a href="#" class="footer__column-link"><img class="footer_social-icon" alt="Инстаграм"
+              <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Инстаграм"
                   src="./images/instagram_color_white.svg">Instagram</a>
             </li>
           </ul>
