--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
+      <img src="./images/header/logo_place_header.svg" alt="Яндекс лого" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?
         <a href="#" class="header__link">Узнать →</a>
       </p>
-      <img src="./images/header-image.png" alt="Учеба боль" class="header__main-illustration">
+      <img src="./images/header/header-image.png" alt="Учеба боль" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
 
@@ -53,29 +53,29 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img src="./images/cards-attention.png" alt="Внимание" class="cards__image">
+            <img src="./images/cards/cards-attention.png" alt="Внимание" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-recall.png" alt="Риколл" class="cards__image">
+            <img src="./images/cards/cards-recall.png" alt="Риколл" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
+            <img src="./images/cards/cards-interliving.png" alt="Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
+            <img src="./images/cards/cards-question.png" alt="Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </div>
           <div class="cards__item">
-            <img src="./images/cards-competence.png" alt="Компетенции" class="cards__image">
+            <img src="./images/cards/cards-competence.png" alt="Компетенции" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -119,7 +119,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a href="#" class="feynman__link">Подробнее →</a>
-        <img src="./images/feynman.png" alt="Ричард Фейнман " class="feynman__image">
+        <img src="./images/feynman/feynman.png" alt="Ричард Фейнман " class="feynman__image">
       </section>
 
       <section class="digits">
@@ -173,7 +173,7 @@
           <h4 class="khan__quote-author">Джордж Лукас</h4>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="./images/khan-book.jpg" alt="Книга" class="khan__book-pic">
+            <img src="./images/khan/khan-book.jpg" alt="Книга" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу →</a>
           </div>
         </div>
@@ -232,10 +232,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-          <img src="./images/logo/resources-n1.svg" alt="Коняев+1" class="resources__logo">
-          <img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-          <img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo">
+          <img src="./images/resources/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
+          <img src="./images/resources/resources-n1.svg" alt="Коняев+1" class="resources__logo">
+          <img src="./images/resources/resources-strelka.svg" alt="Стрелка" class="resources__logo">
+          <img src="./images/resources/resources-polka.svg" alt="Полка" class="resources__logo">
         </div>
       </section>
 
@@ -243,7 +243,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Яндекс лого подвал" class="logo logo_place_footer">
+          <img src="./images/footer/logo_place_footer.svg" alt="Яндекс лого подвал" class="logo logo_place_footer">
           <p class="footer__author">&copy; 2021. Колганов Александр</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -265,15 +265,15 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Фэйсбук"
-                  src="./images/facebook_color_white.svg">Facebook</a>
+                  src="./images/footer/facebook_color_white.svg">Facebook</a>
             </li>
             <li>
               <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Вконтакте"
-                  src="./images/vk_color_white.svg">ВКонтакте</a>
+                  src="./images/footer/vk_color_white.svg">ВКонтакте</a>
             </li>
             <li>
               <a href="#" class="footer__column-link"><img class="footer__social-icon" alt="Инстаграм"
-                  src="./images/instagram_color_white.svg">Instagram</a>
+                  src="./images/footer/instagram_color_white.svg">Instagram</a>
             </li>
           </ul>
         </nav>
