--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <p class="section-subtitle">Для тех кто любит прокрастинировать</p>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__frame" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player"></iframe>
+            title="YouTube video player" allowfullscreen></iframe>
           <iframe class="video__frame" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player"></iframe>
+            title="YouTube video player" allowfullscreen></iframe>
         </div>
       </section>
 
