--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
-          </div>
-          <div class="cards__item">
+            <div class="cards__item">
+            </div>
           </div>
         </div>
       </section>
@@ -89,10 +89,10 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__frame" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-            title="YouTube video player" allowfullscreen></iframe>
-          <iframe class="video__frame" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-            title="YouTube video player" allowfullscreen></iframe>
+          <iframe class="video__frame" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            allowfullscreen></iframe>
+          <iframe class="video__frame" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+            allowfullscreen></iframe>
         </div>
       </section>
 
@@ -161,12 +161,12 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <h4 class="khan__quote-author">Джордж Лукас</h4>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan/khan-book.jpg" alt="Книга" class="khan__book-pic">
@@ -228,10 +228,14 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img src="./images/resources/resources-arzamas.svg" alt="Арзамас" class="resources__logo">
-          <img src="./images/resources/resources-n1.svg" alt="Коняев+1" class="resources__logo">
-          <img src="./images/resources/resources-strelka.svg" alt="Стрелка" class="resources__logo">
-          <img src="./images/resources/resources-polka.svg" alt="Полка" class="resources__logo">
+          <a href="#" class="resources__logo-link"><img src="./images/resources/resources-arzamas.svg" alt="Арзамас"
+              class="resources__logo"></a>
+          <a href="#" class="resources__logo-link"><img src="./images/resources/resources-n1.svg" alt="Коняев+1"
+              class="resources__logo"></a>
+          <a href="#" class="resources__logo-link"><img src="./images/resources/resources-strelka.svg" alt="Стрелка"
+              class="resources__logo"></a>
+          <a href="#" class="resources__logo-link"><img src="./images/resources/resources-polka.svg" alt="Полка"
+              class="resources__logo"></a>
         </div>
       </section>
 
@@ -240,7 +244,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img src="./images/footer/logo_place_footer.svg" alt="Яндекс лого подвал" class="logo logo_place_footer">
-          <p class="footer__author">&copy; 2021. Колганов Александр</p>
+          <p class="footer__author">&copy; 2022. Колганов Александр</p>
         </div>
         <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
